<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:background="@color/gray_2"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.cardview.widget.CardView
            android:layout_margin="0dp"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="@color/gray_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="top|center_horizontal"
                    android:padding="5dp">
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:src="@drawable/ic_description_white_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:layout_weight="0.80"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_id_factura"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textAlignment="textStart"
                            android:textColor="@color/azulDupree"
                            tools:text="@string/concat_id_factura"/>
                        <TextView
                            android:id="@+id/tv_campana"
                            android:gravity="start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="12sp"
                            android:textColor="@color/gray_6"
                            tools:text="@string/concat_campana"/>
                        <TextView
                            android:id="@+id/tv_precio_total"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:gravity="end"
                            android:textColor="@color/gray_6"
                            tools:text="@string/concat_precio_total"/>

                    </LinearLayout>
                    <ImageView
                        android:id="@+id/arrow"
                        android:layout_weight="0"
                        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>